# ietf-tcp-research-project

./: LICENSE  README.md
.github/workflows/: main.yml
publication/: bib.bib  model-based-management.aux  model-based-management.bbl  model-based-management.blg  model-based-management.out  model-based-management.tex
publication/contents/: 1_Introduction.tex  2_ClixonFramework.tex  3_Prototype.tex  4_RelatedWork.tex  5_Conclusion.tex  _A_abstract.tex
tcp-plugin-qnx/: .cproject  .gitignore  .project  CMakeLists.txt  README.md  plugin_config.xml  plugin_init.cpp  plugin_lifecycle.cpp  plugin_lifecycle.h  plugin_options.cpp  plugin_options.h  plugin_rpc.cpp  plugin_rpc.h  plugin_state.cpp  plugin_state.h  setup-plugin.bat  utility_tcp.cpp  utility_tcp.h
tcp-plugin-ubuntu/: .gitignore  CMakeLists.txt  README.md  plugin_config.xml  plugin_init.cpp  plugin_options.cpp  plugin_state.cpp  plugin_state.h  plugin_transaction.cpp  plugin_transaction.h  utility_tcp.cpp  utility_tcp.h
